Add option to use PHP file as router for the server

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Run a local PHP server from within Atom, displaying the log in a bottom panel",
   "activationCommands": {
     "atom-workspace": "php-server:start",
-    ".tree-view": "php-server:start-tree",
+    ".tree-view": ["php-server:start-tree","php-server:start-tree-route"],
     "atom-text-editor": "php-server:start-document"
   },
   "repository": "https://github.com/leijou/php-server",
