--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "php-server",
   "main": "./lib/php-server",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Run a local PHP server from within Atom, displaying the log in a bottom panel",
   "activationCommands": {
     "atom-workspace": "php-server:start",
-    ".tree-view": ["php-server:start-tree","php-server:start-tree-route"],
+    ".tree-view": [
+      "php-server:start-tree",
+      "php-server:start-tree-route"
+    ],
     "atom-text-editor": "php-server:start-document"
   },
   "repository": "https://github.com/leijou/php-server",
