Added command php-server:start-public to start server in folder public
It's usefull to use in frameworks like Laravel

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.8.0",
   "description": "Run a local PHP server from within Atom, displaying the log in a bottom panel",
   "activationCommands": {
-    "atom-workspace": "php-server:start",
+    "atom-workspace": [
+      "php-server:start",
+      "php-server:start-public"
+    ],
     ".tree-view": [
       "php-server:start-tree",
       "php-server:start-tree-route"
